--- a/app/src/main/res/layout/message_first_message.xml
+++ b/app/src/main/res/layout/message_first_message.xml
@@ -74,7 +74,8 @@
             app:srcCompat="@drawable/google_authorization"
             app:layout_constraintTop_toBottomOf="@+id/content1"
             app:layout_constraintLeft_toRightOf="@+id/js_authorization"
-            android:layout_marginStart="40dp" />
+            android:layout_marginStart="40dp"
+            android:onClick="signInUpWithGoogle"/>
 
         <android.support.design.widget.FloatingActionButton
             android:id="@+id/floating_action_button_add_authorization"
