Adding OnClick method to ImageButton in MainActivity

--- a/app/src/main/res/layout/registration_google.xml
+++ b/app/src/main/res/layout/registration_google.xml
@@ -16,5 +16,6 @@
         android:text="Sign OUT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/sign_out" />
+        android:id="@+id/sign_out"
+        android:onClick="onClick"/>
 </LinearLayout>
