--- a/app/src/main/res/values/first_notification.xml
+++ b/app/src/main/res/values/first_notification.xml
@@ -10,4 +10,6 @@
     <string name="action_settings">Settings</string>
     <string name="desc_google_icon">google_authorization</string>
     <string name="desc_js_icon">js_authorization</string>
+    <string name="welcome_email">You signed in with </string>
+    <string name="welcome_name">Welcome,</string>
 </resources>
