--- a/app/src/main/res/layout/navigation_bar_header.xml
+++ b/app/src/main/res/layout/navigation_bar_header.xml
@@ -1,16 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:background="@color/colorPrimaryDarkBack"
-    android:id="@+id/relL"
-    android:paddingTop="15dp"
-    android:paddingBottom="15dp"
-    android:paddingLeft="15dp"
-    android:paddingRight="15dp"
-    >
+    android:id="@+id/relL">
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/user_icon"
+        tools:layout_alignParentCenter="true"
+        android:background="@mipmap/ic_account_circle_black_48dp"
+        tools:ignore="ContentDescription"
+        tools:layout_constraintTop_creator="1"
+        android:layout_marginTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        android:layout_marginStart="5dp" />
+
+    <Button
+        android:text="@string/sign_out"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/ButtonStyle"
+        android:textSize="14sp"
+        android:id="@+id/btn_sign_out"
+        android:onClick="onClick"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/user_icon"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.97"
+        app:layout_constraintVertical_bias="0.52" />
 
     <TextView
         android:text="@string/not_signed_in"
@@ -18,20 +42,27 @@
         android:textColor="@color/almostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="17dp"
-        android:id="@+id/textView2"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/imageView" />
+        android:id="@+id/bar_name"
+        tools:layout_constraintBottom_creator="1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingStart="58.5dp"
+        android:paddingEnd="8dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintVertical_bias="0.90999997"
+        app:layout_constraintHorizontal_bias="0.25" />
 
-    <ImageView
+    <TextView
+        android:text="@string/not_signed_in"
+        android:textSize="14sp"
+        android:textColor="@color/almostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        tools:layout_alignParentCenter="true"
-        android:background="@mipmap/ic_account_circle_black_48dp"
-        android:layout_centerVertical="true"
-        android:layout_alignParentStart="true"
-        android:paddingLeft="15dp"
-        android:paddingRight="15dp"
-        tools:ignore="ContentDescription" />
-</RelativeLayout>
+        android:id="@+id/bar_email"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingStart="59dp"
+        android:paddingEnd="8dp"
+        android:layout_marginBottom="16dp"
+        app:layout_constraintHorizontal_bias="0.175"
+        tools:layout_editor_absoluteX="0dp" />
+</android.support.constraint.ConstraintLayout>
