--- a/app/src/main/res/layout/navigation_bar_header.xml
+++ b/app/src/main/res/layout/navigation_bar_header.xml
@@ -49,8 +49,9 @@
         android:paddingStart="58.5dp"
         android:paddingEnd="8dp"
         android:layout_marginBottom="40dp"
-        app:layout_constraintVertical_bias="0.90999997"
-        app:layout_constraintHorizontal_bias="0.25" />
+        app:layout_constraintVertical_bias="0.99"
+        app:layout_constraintHorizontal_bias="0.25"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:text="@string/not_signed_in"
@@ -62,7 +63,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:paddingStart="59dp"
         android:paddingEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="19dp"
         app:layout_constraintHorizontal_bias="0.175"
         tools:layout_editor_absoluteX="0dp" />
 </android.support.constraint.ConstraintLayout>
