--- a/app/src/main/res/layout/navigation_bar_header.xml
+++ b/app/src/main/res/layout/navigation_bar_header.xml
@@ -28,17 +28,17 @@
         style="@style/ButtonStyle"
         android:textSize="14sp"
         android:id="@+id/btn_sign_out"
-        android:onClick="onClick"
+        android:onClick="onClickSignOut"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/bar_email"
         app:layout_constraintLeft_toRightOf="@+id/user_icon"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.97"
-        app:layout_constraintVertical_bias="0.52" />
+        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintVertical_bias="0.25" />
 
     <TextView
-        android:text="@string/not_signed_in"
-        android:textSize="18sp"
+        android:text="@string/no_user"
+        android:textSize="17.5sp"
         android:textColor="@color/almostWhite"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
         tools:layout_editor_absoluteX="0dp" />
 
     <TextView
-        android:text="@string/not_signed_in"
+        android:text="@string/no_user"
         android:textSize="14sp"
         android:textColor="@color/almostWhite"
         android:layout_width="wrap_content"
