1. Translated left_panel items, changed , 2. added user integration in FareBase, 3. added animation of collapsing first message, 4. set by default the second page when open, 5. optimized variables in MainActivity

--- a/app/src/main/res/values-ru/left_panel.xml
+++ b/app/src/main/res/values-ru/left_panel.xml
@@ -2,4 +2,8 @@
 <resources>
     <string name="sign_out">Выйти</string>
     <string name="no_user">Вход не выполнен</string>
+    <string name="notifications">Уведомления</string>
+    <string name="settings">Настройки</string>
+    <string name="about_app">О приложении</string>
+
 </resources>
