--- a/app/src/main/res/layout/message_first_message.xml
+++ b/app/src/main/res/layout/message_first_message.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/action_bar"
+    android:id="@+id/message_action_bar"
     android:background="@color/colorPrimaryDarkBack"
     app:contentInsetStart="0dp">
 
