--- a/app/src/main/res/values-en/left_panel.xml
+++ b/app/src/main/res/values-en/left_panel.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="sign_out">Sign out</string>
-    <string name="no_user">You are not signed</string>
+    <string name="no_user">You are not signed in</string>
+    <string name="notifications">Notifications</string>
+    <string name="settings">Settings</string>
+    <string name="about_app">About app</string>
 </resources>
